[gd_scene format=3 uid="uid://dbptjtcsf8jfo"]

[ext_resource type="Script" uid="uid://b52uceitstxql" path="res://Scripts/Menu_Ui.gd" id="1_2f5qs"]
[ext_resource type="Texture2D" uid="uid://det2w1nm6v5w1" path="res://Assets/MenuUI/Grey Star.png" id="1_28efy"]
[ext_resource type="Texture2D" uid="uid://c6y6fx8rver7a" path="res://Assets/MenuUI/black.webp" id="3_bryks"]
[ext_resource type="Texture2D" uid="uid://t60qr40i0gnf" path="res://Assets/MenuUI/Restart.webp" id="3_jg0i6"]
[ext_resource type="Texture2D" uid="uid://b5nlm2vbcj3mn" path="res://Assets/MenuUI/Menu.webp" id="4_q32wx"]
[ext_resource type="Texture2D" uid="uid://cmgfvk0wpedvg" path="res://Assets/MenuUI/GreyArrow.webp" id="5_ofcii"]

[node name="MenuUI" type="Control" unique_id=1065218817]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2f5qs")

[node name="Control" type="Control" parent="." unique_id=1369239076]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -514.0
offset_top = -150.0
offset_right = 514.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=1588122514]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -269.5
offset_right = 269.5
offset_bottom = 258.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="StarContainer" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=212160923]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="Star" type="TextureRect" parent="Control/VBoxContainer/StarContainer" unique_id=1457397854]
layout_mode = 2
texture = ExtResource("1_28efy")
expand_mode = 3
stretch_mode = 4

[node name="Star2" type="TextureRect" parent="Control/VBoxContainer/StarContainer" unique_id=1018404109]
layout_mode = 2
texture = ExtResource("1_28efy")
expand_mode = 3
stretch_mode = 4

[node name="Star3" type="TextureRect" parent="Control/VBoxContainer/StarContainer" unique_id=794896267]
layout_mode = 2
texture = ExtResource("1_28efy")
expand_mode = 3
stretch_mode = 4

[node name="ButtonContainer" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=1240213738]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RestartIcon" type="TextureRect" parent="Control/VBoxContainer/ButtonContainer" unique_id=1490900852]
layout_mode = 2
texture = ExtResource("3_jg0i6")
expand_mode = 3

[node name="Restart" type="Button" parent="Control/VBoxContainer/ButtonContainer/RestartIcon" unique_id=1988563341]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="MenuIcon" type="TextureRect" parent="Control/VBoxContainer/ButtonContainer" unique_id=193881886]
layout_mode = 2
texture = ExtResource("4_q32wx")
expand_mode = 3

[node name="Menu" type="Button" parent="Control/VBoxContainer/ButtonContainer/MenuIcon" unique_id=612540746]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="NextIcon" type="TextureRect" parent="Control/VBoxContainer/ButtonContainer" unique_id=820535549]
layout_mode = 2
texture = ExtResource("5_ofcii")
expand_mode = 3

[node name="Next" type="Button" parent="Control/VBoxContainer/ButtonContainer/NextIcon" unique_id=48215011]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SemiTransparent Layer" type="TextureRect" parent="Control" unique_id=105515403]
modulate = Color(1, 1, 1, 0.2)
z_index = -332
layout_mode = 1
offset_right = 1000.0
offset_bottom = 100.0
mouse_filter = 2
mouse_behavior_recursive = 1
texture = ExtResource("3_bryks")
expand_mode = 4

[connection signal="pressed" from="Control/VBoxContainer/ButtonContainer/RestartIcon/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonContainer/MenuIcon/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonContainer/NextIcon/Next" to="." method="_on_next_pressed"]
